testcases/bindgen/197/error_message.txt
error[E0080]: evaluation of constant value failed
  --> ./open/197/generated_bindings.rs:10:26
   |
10 | ...ruct"][::std::mem::size_of::<mystruct>() - 4usize];
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `1_usize - 4_usize`, which would overflow

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
